Testaa DELETE- ja PUT-metodien toteutusta
* Käytä rohmotin omaa konfiguraatiota kyselymetodin selvittämiseen.
  Tämä mahdollistaa 'method_override'-parametrin käyttämisen HTML:n
  rajoitusten kiertämiseen.

* Lisää 'Poista'-napit (+ tyyli) reseptisivulle.

* Toteuta reseptin poistaminen DELETE-metodilla.

* Lisää delete-metodi Reseptiin

--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -119,3 +119,22 @@ form.cmxform label {
 form.cmxform fieldset fieldset label {
   margin-left: 123px; /* Width plus 3 (html space) */
 }
+
+/*
+ * http://tips4php.net/2010/08/create-nice-submit-buttons-with-css-and-no-images/
+ */
+input.deleteform {
+    background-color:#00A400;
+    color: #ffffff;
+    border-width:1px;
+    border-color:#000000;
+    display: inline;
+}
+
+input.deleteform:hover {
+    background-color:#00CC00;
+}
+
+form.deleteform {
+    display: inline;
+}
