Toteuta tekstihaku käyttäen PostgreSQL:n tekstihakua
Käytä PostgreSQL:n Full Text Search -ominaisuutta:

  http://www.postgresql.org/docs/8.4/static/textsearch-intro.html

Lisää reseptitauluun tsvector-tyyppinen GIN-indeksoitu kenttä, jota
vasten tekstihakuja voi tehdä tehokkaasti. Tekstihaku kohdistuu
tekstiin, joka muodostetaan PL/PgSQL-funktiolla
muodosta_reseptin_teksti(resepti_id). Kentän ylläpitäminen tapahtuu
liipaisimien avulla, jotka laukeavat reseptin nimen, valmistusohjeen
tai ruoka-aineiden muuttuessa.

Hakua voisi parantaa huomattavasti, jos löytyisi parempia sanakirjoja
suomenkieliselle tekstille. Nyt 'finnish_stem'-sanakirja ei näytä
löytävän sanojen kantoja kovinkaan hyvin.

Myös mm. osumien järjestäminen rankin mukaan puuttuu toteutuksesta.

--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -91,8 +91,16 @@ div.comment {
     border-right: none;
 }
 
+div.hakutulos {
+    margin-left: 1em;
+}
+
 div.hakutulos b {
     color: #FF0000;
+}
+
+input.haku {
+    width: 40em;
 }
 
 /*
