--- a/static/styles/default.css
+++ b/static/styles/default.css
@@ -2,6 +2,11 @@ p {
     width: 600px;
 }
 
+img {
+    width:100%;
+    max-width:600px;
+}
+
 .valmistusohje {
     width: 600px;
     background: #E0E0E0;
